--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,20 @@ img
   margin-left: auto;
   margin-right: auto;
 }
+.center
+{
+  text-align: left;
+  font-family: sans-serif;
+}
+dt
+{
+  font-weight: bold;
+  font-style: italic;
+}
+}
+dl
+{
+  column-count: 3;
+  column-fill: auto;
+  column-gap: normal;
+}
